# qTriangle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/qTriangle/: Types.hpp  Util.hpp  qTriangle.hpp
media/: qTriangle.aep
scripts/: GenGifs.py
source/: main.cpp
source/qTriangle/: Util.cpp  qTriangle-x86.hpp  qTriangle.cpp
test/: Bench.hpp  Benchmark.cpp  Display.cpp  FillShape.cpp  stb_image_write.h
